<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chauffr.Entry">


    <Button
        android:background="@drawable/chauffeur_btn_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:textColor="#FFFFFF"
        android:layout_above="@+id/entry_text_or"
        android:layout_centerHorizontal="true"
        android:onClick="openConnectingActivity"/>

    <Button
        android:background="@drawable/chauffeur_btn_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/entry_text_or"
        android:layout_centerHorizontal="true"
        android:onClick="openLoginActivity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:id="@+id/entry_text_or"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</RelativeLayout>
