<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chauffeur.appyfuture.chauffeur.Welcome">

    <TextView
        android:layout_marginTop="30dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_title"
        android:id="@+id/welcome_title"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_sub_title"
        android:id="@+id/welcome_sub_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:layout_margin="30dip"
        android:id="@+id/chauffeur_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome_sub_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="20dip"
        android:text="@string/welcome_footer"
        android:id="@+id/welcome_footer"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/chauffeur_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:onClick="signup"
        android:id="@+id/ok_btn"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome_footer" />
</RelativeLayout>
