<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chauffr.home.Dropoff"
    tools:showIn="@layout/dropoff_activity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/home_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dip"
                android:weightSum="1.0">
                <com.joanzapata.iconify.widget.IconButton
                    android:layout_weight="0.2"
                    android:layout_width="0dip"
                    android:background="@drawable/chauffeur_btn_active"
                    android:textColor="@color/white"
                    android:text="{fa-home}"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_weight="0.8"
                    android:background="@drawable/chauffeur_btn_active"
                    android:textColor="#FFFFFF"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/myhome"
                    android:id="@+id/button"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="openHomeAddress"/>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/home_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/work_group"
                android:layout_marginTop="20dip"

                android:weightSum="1.0">
                <com.joanzapata.iconify.widget.IconButton
                    android:layout_weight="0.2"
                    android:layout_width="0dip"
                    android:background="@drawable/chauffeur_btn_active"
                    android:textColor="@color/white"
                    android:text="{fa-briefcase}"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_weight="0.8"
                    android:background="@drawable/chauffeur_btn_active"
                    android:textColor="@color/white"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/mywork"
                    android:id="@+id/button2"
                    android:layout_alignLeft="@+id/button"
                    android:layout_alignStart="@+id/button"
                    android:onClick="openWorkAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/work_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/airport_group"
                android:layout_marginTop="20dip"
                android:weightSum="1.0">
                <com.joanzapata.iconify.widget.IconButton
                    android:layout_weight="0.2"
                    android:layout_width="0dip"
                    android:background="@drawable/chauffeur_btn_active"
                    android:textColor="@color/white"
                    android:text="{fa-plane}"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_weight="0.8"
                    android:background="@drawable/chauffeur_btn_active"
                    android:textColor="@color/white"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/airport"
                    android:id="@+id/button3"
                    android:layout_centerHorizontal="true"
                    android:onClick="openAirportAddress"/>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/airport_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/other_group"
                android:layout_marginTop="20dip"
                android:weightSum="1.0">
                <com.joanzapata.iconify.widget.IconButton
                    android:layout_weight="0.2"
                    android:layout_width="0dip"
                    android:background="@drawable/chauffeur_btn_active"
                    android:textColor="@color/white"
                    android:text="{fa-map-marker}"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_weight="0.8"
                    android:background="@drawable/chauffeur_btn_active"
                    android:textColor="#FFFFFF"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/otherAddress"
                    android:id="@+id/button4"
                    android:layout_centerHorizontal="true"
                    android:onClick="openOtherAddress"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
